--- a/demo/src/Demo/Demo.css
+++ b/demo/src/Demo/Demo.css
@@ -1,10 +1,12 @@
 .wrapper {
   text-align: center;
+  /* max-width: 100%; */
 }
 
 .container {
   display: flex;
-  padding: 10px 40px;
+  flex-wrap: wrap;
+  padding: 10px 10px;
 }
 .container>* {
   flex: 1;
@@ -15,8 +17,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0 10px;
 }
 
 .options-container>input {
   display: block;
+}
+
+.code-ui pre {
+  max-width: calc(100vw - 60px);
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    padding: 10px 40px;
+  }
 }
